# organic-dump-build-root

./: .gitignore  CMakeLists.txt  CMakeToolchain.txt  README.md
scripts/: adopt-peripheral.sh  ca_cert.pem  client-resources.sh  client_cert.pem  client_key.pem  config.json  find-pis-on-local-network.sh  init-organic-dump-server-db-data.sh  log-in-to-organic-dump-server.sh  push-all-packages.sh  push-packages-to-pi2.sh  push-test-packages.sh  register-pi.sh  register-soil-moisture-sensor.sh  run-pot-monitor.sh  scp-to-organic-dump-server.sh  send-soil-moisture-measurement.sh  server_cert.pem  server_key.pem  test-client.sh  test-mutual-auth-client.sh  test-mutual-auth-server.sh  upload-organic-dump-to-server.sh
